@@ -4,6 +4,7 @@ Apache Tez Change Log
 Release 0.5.4: Unreleased
 
 ALL CHANGES:
+  TEZ-2199. updateLocalResourcesForInputSplits assumes wrongly that split data is on same FS as the default FS.
   TEZ-2162. org.apache.hadoop.mapreduce.lib.output.SequenceFileOutputFormat is not recognized
   TEZ-2193. Check returned value from EdgeManagerPlugin before using it
   TEZ-2133. Secured Impersonation: Failed to delete tez scratch data dir
